troubleshooting-advanced/24-ingress-controller/lab/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-app
  namespace: troubleshoot-adv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-app
  template:
    metadata:
      labels:
        app: ingress-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.25
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-app
  namespace: troubleshoot-adv
spec:
  selector:
    app: ingress-app
  ports:
    - port: 80
      targetPort: 80
